# dravex

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
ext/audio/: miniaudio.h  stb_vorbis.c
ext/imgui_colortexteditor/: texteditor.cpp  texteditor.hpp
ext/imgui_fontawesome/: imgui_fontawesome.hpp  imgui_fontawesome_brands.hpp
ext/imgui_memoryeditor/: imgui_memory_editor.hpp
res/: dravex.h  dravex.rc
shared/cmake/: cache.cmake  clangtidy.cmake  platform.cmake  settings.cmake  warnings.cmake
src/: binarybuffer.hpp  defines.hpp  imgui_dravex.cpp  imgui_dravex.hpp  logging.cpp  logging.hpp  main.cpp  utils.hpp  window.cpp  window.hpp
src/assets/: asset.hpp  asset_font.hpp  asset_ogg.hpp  asset_splash.hpp  asset_text.hpp  asset_texture.hpp  asset_unknown.hpp
src/package/: package.cpp  package.hpp  v118.hpp  v666.hpp
